# RAG-AR

./: README.md
rag-ar/: .kedro.yml  README.md  pyproject.toml  requirements.txt
rag-ar/conf/: logging.yml
rag-ar/conf/base/: catalog.yml  parameters.yml  parameters_queries.yml
rag-ar/docs/source/: conf.py  index.rst
rag-ar/src/: rag_app.py
rag-ar/src/llm_clients/: openrouter_client.py  prompts.py
rag-ar/src/rag_ar/: __init__.py  __main__.py  hooks.py  pipeline_registry.py  settings.py
rag-ar/src/rag_ar/pipelines/embeddings/: nodes.py  pipeline.py
rag-ar/src/rag_ar/pipelines/format_output/: nodes.py  pipeline.py
rag-ar/src/rag_ar/pipelines/load_pdf/: nodes.py  pipeline.py
rag-ar/src/rag_ar/pipelines/query_llm/: nodes.py  pipeline.py
rag-ar/src/rag_ar/pipelines/split_text/: nodes.py  pipeline.py
rag-ar/src/rag_ar/pipelines/vector_store/: nodes.py  pipeline.py
