[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rag_ar"
version = "0.1.0"
description = "Retrieval-Augmented Generation (RAG) pipeline built on Kedro"
authors = [{name = "Your Name", email = "your@email.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.kedro]
project_name = "rag_ar"
package_name = "rag_ar"
kedro_init_version = "0.19.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.kedro_telemetry]
project_id = "1e9aee26fdc64ebba294cd9fc59273a3"
